<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".RegisterActivity">
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/phoneLayout" app:layout_constraintBottom_toBottomOf="parent"
			android:id="@+id/buttonLayout">

		<Button
				android:text="@string/registerText"
				android:layout_width="0dp"
				android:layout_height="60dp" android:id="@+id/toRegister" android:layout_weight="3"
				android:onClick="onRegister"
				android:layout_margin="20dp"/>

	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:id="@+id/usernameLayout" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp">
		<TextView
				android:text="@string/usernameText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/usernameTextView" android:layout_weight="1"
				android:textSize="15sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:text=""
				android:hint="@string/usernameEdit"
				android:ems="10"
				android:id="@+id/usernameEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:id="@+id/ageLayout" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/confirmLayout">
		<TextView
				android:text="@string/ageText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/ageTextView" android:layout_weight="1"
				android:textSize="15sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:text=""
				android:hint="@string/ageEdit"
				android:ems="10"
				android:id="@+id/ageEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:id="@+id/phoneLayout" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/ageLayout">
		<TextView
				android:text="@string/phoneText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/phoneTextView" android:layout_weight="1"
				android:textSize="15sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:text=""
				android:hint="@string/phoneEdit"
				android:ems="10"
				android:id="@+id/phoneEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_height="100dp"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
			android:id="@+id/passwordLayout">
		<TextView
				android:text="@string/passwordText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/passwordTextView" android:layout_weight="1"
				android:textSize="15sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:ems="10"
				android:hint="@string/passwordEdit"
				android:id="@+id/passwordEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_height="100dp"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
			android:id="@+id/confirmLayout">
		<TextView
				android:text="@string/confirmText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/confirmTextView" android:layout_weight="1"
				android:textSize="15sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:ems="10"
				android:hint="@string/confirmEdit"
				android:id="@+id/confirmEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>