<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">


	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/passwordLayout" app:layout_constraintBottom_toBottomOf="parent"
			android:id="@+id/buttonLayout">

		<Button
				android:text="@string/registerText"
				android:layout_width="20dp"
				android:layout_height="60dp" android:id="@+id/registerBtn" android:layout_weight="2"
				android:onClick="toRegister"
				android:layout_margin="20dp"/>
		<Button
				android:text="@string/loginText"
				android:layout_width="wrap_content"
				android:layout_height="60dp" android:id="@+id/loginBtn" android:layout_weight="3"
				android:onClick="toLogin"
				android:layout_margin="20dp"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:id="@+id/usernameLayout" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="200dp">
		<TextView
				android:text="@string/usernameText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/usernameTextView" android:layout_weight="1"
				android:textSize="20sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:hint="@string/usernameEdit"
				android:ems="10"
				android:id="@+id/usernameEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_height="100dp"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
			android:id="@+id/passwordLayout">
		<TextView
				android:text="@string/passwordText"
				android:layout_width="20dp"
				android:layout_height="40dp" android:id="@+id/passwordTextView" android:layout_weight="1"
				android:textSize="20sp" android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:hint="@string/passwordEdit"
				android:ems="10"
				android:id="@+id/passwordEditText" android:layout_weight="1" android:layout_margin="20dp"
				android:minHeight="48dp"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>